--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "default": "./dist/cjs/index.js"
       },
       "import": {
-        "types": "./dist/esmindex.d.ts",
+        "types": "./dist/esm/index.d.ts",
         "default": "./dist/esm/index.js"
       }
     }
@@ -28,9 +28,15 @@
     "test": "NODE_ENV=test jest"
   },
   "devDependencies": {
+    "@types/component-emitter": "^1.2.11",
     "copyfiles": "^2.4.1",
     "rimraf": "^5.0.1",
     "tsc-alias": "^1.8.7",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "@msgpack/msgpack": "3.0.0-beta2",
+    "component-emitter": "^1.3.0",
+    "ytil": "workspace:^"
   }
 }
