--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "socket.io-msgpack-parser",
+  "name": "msgpack-codec",
   "version": "0.0.1",
   "description": "socket.io parser based on latest msgpack",
   "private": true,
