--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "NODE_ENV=test jest"
   },
   "devDependencies": {
+    "buffer": "^6.0.3",
     "copyfiles": "^2.4.1",
     "rimraf": "^5.0.1",
     "tsc-alias": "^1.8.7",
