--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   "devDependencies": {
     "buffer": "^6.0.3",
     "copyfiles": "^2.4.1",
-    "rimraf": "^5.0.1",
-    "tsc-alias": "^1.8.7",
-    "typescript": "^5.1.6"
+    "rimraf": "^5.0.5",
+    "tsc-alias": "^1.8.8",
+    "typescript": "5.4.3"
   },
   "dependencies": {
     "@msgpack/msgpack": "3.0.0-beta2",
