Added package manager for turbo

--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
   "dependencies": {
     "@msgpack/msgpack": "3.0.0-beta2",
     "ytil": "workspace:^"
-  }
+  },
+  "packageManager": "pnpm@8.4.0"
 }
