--- a/package.json
+++ b/package.json
@@ -4,17 +4,11 @@
   "description": "socket.io parser based on latest msgpack",
   "private": true,
   "author": "Joost Lubach <joostlubach@gmail.com>",
-  "main": "./dist/index.js",
+  "main": "./src/index.ts",
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
-    }
+    ".": "./src/index.ts"
   },
   "scripts": {
-    "build": "pnpm clean && pnpm build:tsc",
-    "build:tsc": "tsc -p tsconfig.prod.json",
-    "clean": "rimraf dist",
     "lint": "eslint src --ext .ts",
     "check": "tsc -p . --noEmit",
     "test": "NODE_ENV=test jest"
