--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "test": "NODE_ENV=test jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "buffer": "^6.0.3",
     "copyfiles": "^2.4.1",
+    "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "tsc-alias": "^1.8.8",
     "typescript": "5.4.3"
