--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "moduleResolution": "Node10",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "rootDir": "src"
+    "rootDir": "src",
+    "types": ["jest"]
   },
   "include": [
     "src"
