--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "buffer": "^6.0.3",
     "copyfiles": "^2.4.1",
+    "js-yaml": "^4.1.0",
     "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.16",
     "typescript": "5.4.3"
