--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "tsc-alias": "^1.8.8",
-    "typescript": "5.4.3"
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "@msgpack/msgpack": "3.0.0-beta2",
