--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/jest": "^29.5.14",
     "buffer": "^6.0.3",
     "copyfiles": "^2.4.1",
+    "fs": "^0.0.1-security",
     "jest": "^29.7.0",
+    "js-yaml": "^4.1.0",
     "rimraf": "^5.0.5",
     "tsc-alias": "^1.8.8",
     "typescript": "^5.9.2"
