--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "description": "socket.io parser based on latest msgpack",
   "private": true,
   "author": "Joost Lubach <joostlubach@gmail.com>",
-  "main": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/types/index.d.ts",
   "exports": {
-    ".": "./src/index.ts"
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "module": "./dist/esm/index.js",
+      "default": "./dist/cjs/index.js"
+    }
   },
   "scripts": {
+    "build": "bun clean && bun build:tsc",
+    "build:tsc": "bun build:tsc:esm && bun build:tsc:cjs",
+    "build:tsc:esm": "tsc -p tsconfig.prod.json --module esnext --outDir dist/esm --declarationDir dist/types",
+    "build:tsc:cjs": "tsc -p tsconfig.prod.json --module commonjs --outDir dist/cjs --declaration false --declarationMap false",
+    "clean": "rimraf dist",
     "lint": "eslint src --ext .ts",
     "check": "tsc -p . --noEmit",
     "test": "NODE_ENV=test jest"
@@ -19,6 +29,7 @@
     "copyfiles": "^2.4.1",
     "fs": "^0.0.1-security",
     "jest": "^29.7.0",
+    "rimraf": "^6.0.1",
     "typescript": "^5.8.3"
   },
   "dependencies": {
