--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.20",
     "buffer": "^6.0.3",
     "copyfiles": "^2.4.1",
     "fs": "^0.0.1-security",
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "@msgpack/msgpack": "3.0.0-beta2",
+    "lodash": "^4.17.21",
     "ytil": "workspace:^"
   }
 }
