--- a/package.json
+++ b/package.json
@@ -19,18 +19,21 @@
     "build:tsc:esm": "tsc -p tsconfig.prod.json --module esnext --outDir dist/esm --declarationDir dist/types",
     "build:tsc:cjs": "tsc -p tsconfig.prod.json --module commonjs --outDir dist/cjs --declaration false --declarationMap false",
     "clean": "rimraf dist",
-    "lint": "eslint",
+    "lint": "eslint src",
     "check": "tsc -p . --noEmit",
     "test": "NODE_ENV=test jest"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.20",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
     "buffer": "^6.0.3",
     "copyfiles": "^2.4.1",
     "eslint": "^9.38.0",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "fs": "^0.0.1-security",
     "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
